# boran-ai

./: .env.example  .gitignore  README.md  SESSION_CHECKPOINT_2026-04-03.md  SESSION_CHECKPOINT_2026-04-04.md  SESSION_CHECKPOINT_2026-04-07.md  SESSION_CHECKPOINT_2026-04-08.md  SESSION_CHECKPOINT_2026-04-09.md  SESSION_CHECKPOINT_2026-04-09_DB_ARCHITECTURE.md  SESSION_CHECKPOINT_2026-04-10_ADMIN_DOCUMENTS_BULK.md  SESSION_CHECKPOINT_2026-04-10_ADMIN_MVP.md  SESSION_CHECKPOINT_2026-04-11_ADMIN_UI_SW.md  docker-compose.yml  pyproject.toml  requirements.txt  start-dev.ps1
app/: __init__.py  config.py  main.py  schemas.py
app/admin/: __init__.py  routes.py  service.py
app/api/: routes.py
app/auth/: routes.py  schemas.py  service.py  utils.py
app/db/: bootstrap.py  models.py  session.py  sync.py
boranMobile/: App.tsx  app.json  package-lock.json  package.json
frontend/: .env.example  .npmrc  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
mobile/: App.tsx  README.md
postman/: boran-ai.postman_collection.json
sql/: 001_init_postgresql.sql
tests/: test_auth_utils.py  test_clustering.py  test_consolidation.py  test_embeddings.py  test_graph_relations_enhanced.py  test_ingest_parsers.py  test_knowledge_graph.py  test_learning_extractor.py  test_learning_graph.py  test_long_term_memory.py  test_memory_scoring.py  test_rag_diversity_cap.py  test_rag_user_scope.py  test_reflection.py  test_semantic_linking.py  test_upload_size_limit.py  test_voice_api.py  test_voice_tts_fallback.py
(+156 files in other folders)
